[gd_scene load_steps=3 format=3 uid="uid://cb77ty6ww5mmf"]

[ext_resource type="Script" uid="uid://dn4em3nhecsbq" path="res://UI/settings_menu.gd" id="1_77no7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_77no7"]

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource("1_77no7")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_77no7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Volume" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Volume"]
layout_mode = 2
text = "Master Volume"

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/Volume"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="FullScreenCheck" type="CheckButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Full Screen"

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
